[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Teleporter/Teleporter.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Teleporter/TeleporterGroup.gd" type="Script" id=2]

[node name="TeleporterGroup" type="Node" groups=[
"TeleporterGroup",
]]
script = ExtResource( 2 )

[node name="TeleporterA" parent="." instance=ExtResource( 1 )]
teleporter_name = "teleA"
linked_teleporter = "teleB"

[node name="TeleporterB" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 0 )
teleporter_name = "teleB"
linked_teleporter = "teleA"

[connection signal="player_over_charger" from="TeleporterA" to="." method="_on_TeleporterA_player_over_charger"]
[connection signal="teleporter_activated" from="TeleporterA" to="." method="_on_TeleporterA_teleporter_activated"]
[connection signal="player_over_charger" from="TeleporterB" to="." method="_on_TeleporterB_player_over_charger"]
[connection signal="teleporter_activated" from="TeleporterB" to="." method="_on_TeleporterB_teleporter_activated"]
